# seaorm-1

./: .env.example  Cargo.toml
migration/src/: lib.rs
src/: main.rs
